--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
    <body>
       <div id="particles-js"></div>
       <div class="wrapper">
-      <div class="sidebar">
-         <h2>Jet Yeh's</h2>
-         <ul>
-            <a href="pages/report.html">
-               <li><i class="fa-solid fa-bug"></i>   Bug Report</li>
-            </a>
-            <a href="pages/request.html">
-               <li><i class="fa-solid fa-ghost"></i>  Game Request</li>
-            </a>
-            <a href="pages/settings.html">
-               <li><i class="fa-solid fa-gear"></i>  Settings</li>
-            </a>
-            <a>
-               <li id="go-to-top-button"><i class="fa-solid fa-up-long"></i>  Top</li>
-            </a>
-            <div class=left-col>
+         <div class="sidebar">
+            <h2>Jet Yeh's</h2>
+            <ul>
+               <a href="pages/report.html">
+                  <li><i class="fa-solid fa-bug"></i> Bug Report</li>
+               </a>
+               <a href="pages/request.html">
+                  <li><i class="fa-solid fa-ghost"></i> Game Request</li>
+               </a>
+               <a href="pages/settings.html">
+                  <li><i class="fa-solid fa-gear"></i> Settings</li>
+               </a>
+               <a>
+                  <li id="go-to-top-button"><i class="fa-solid fa-up-long"></i> Top</li>
+               </a>
+            </ul>
+            <div class="left-col">
                <img title="icon" src="img/icon.png" width="199px">
             </div>
-         </ul>
-      </div>
+         </div>
       <div class="main_content">
          <div class="alert">
             <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
@@ -84,6 +84,94 @@
          <div class="main">
             <!-- Portfolio Gallery Grid -->
             <div class="row">
+               <div name="Bad Ice-Cream 1" class="column gameDiv all new multi">
+                  <a class="blogLink" href="/games/badicecream/">
+                     <div class="content">
+                        <img loading="lazy" src="img/badicecream.png" alt="Bad Ice-Cream 1" style="width:100%">
+                        <h4>Bad Ice-Cream 2</h4>
+                     </div>
+                  </a>
+               </div>
+               <div name="Bad Ice-Cream 2" class="column gameDiv all new multi">
+                  <a class="blogLink" href="/games/badicecream2/">
+                     <div class="content">
+                        <img loading="lazy" src="img/badicecream2.png" alt="Bad Ice-Cream 2" style="width:100%">
+                        <h4>Bad Ice-Cream 2</h4>
+                     </div>
+                  </a>
+               </div>
+               <div name="Bad Ice-Cream 3" class="column gameDiv all new multi">
+                  <a class="blogLink" href="/games/badicecream3/">
+                     <div class="content">
+                        <img loading="lazy" src="img/badicecream3.png" alt="Bad Ice-Cream 3" style="width:100%">
+                        <h4>Bad Ice-Cream 3</h4>
+                     </div>
+                  </a>
+               </div>
+               <div name="Chess" class="column gameDiv all new multi">
+                  <a class="blogLink" href="/games/chess/">
+                     <div class="content">
+                        <img loading="lazy" src="img/chess.png" alt="Chess" style="width:100%">
+                        <h4>Chess</h4>
+                     </div>
+                  </a>
+               </div>
+               <div name="Friendly Fire" class="column gameDiv all new">
+                  <a class="blogLink" href="/games/friendlyfire/">
+                     <div class="content">
+                        <img loading="lazy" src="img/friendlyfire.png" alt="Friendly Fire" style="width:100%">
+                        <h4>Friendly Fire</h4>
+                     </div>
+                  </a>
+               </div>
+               <div name="Google Solitaire" class="column gameDiv all new">
+                  <a class="blogLink" href="/games/google-solitaire/">
+                     <div class="content">
+                        <img loading="lazy" src="img/google-solitaire.png" alt="Google Solitaire" style="width:100%">
+                        <h4>Google Solitaire</h4>
+                     </div>
+                  </a>
+               </div>
+               <div name="Soccer Random" class="column gameDiv all new multi">
+                  <a class="blogLink" href="/games/soccer-random/">
+                     <div class="content">
+                        <img loading="lazy" src="img/soccer-random.png" alt="Soccer Random" style="width:100%">
+                        <h4>Soccer Random</h4>
+                     </div>
+                  </a>
+               </div>
+               <div name="Volley Random" class="column gameDiv all new multi">
+                  <a class="blogLink" href="/games/volley-random/">
+                     <div class="content">
+                        <img loading="lazy" src="img/volleyball-random.png" alt="Volley Random" style="width:100%">
+                        <h4>Volley Random</h4>
+                     </div>
+                  </a>
+               </div>
+               <div name="Basket Random" class="column gameDiv all new multi">
+                  <a class="blogLink" href="/games/basket-random/">
+                     <div class="content">
+                        <img loading="lazy" src="img/basketball-random.png" alt="Basket Random" style="width:100%">
+                        <h4>Basket Random</h4>
+                     </div>
+                  </a>
+               </div>
+               <div name="BitLife" class="column gameDiv all new">
+                  <a class="blogLink" href="/games/bitlife/">
+                     <div class="content">
+                        <img loading="lazy" src="img/bitlife.png" alt="BitLife" style="width:100%">
+                        <h4>BitLife</h4>
+                     </div>
+                  </a>
+               </div>
+               <div name="CircloO" class="column gameDiv all new">
+                  <a class="blogLink" href="/games/circloo/">
+                     <div class="content">
+                        <img loading="lazy" src="img/circloo.png" alt="CircloO" style="width:100%">
+                        <h4>CircloO</h4>
+                     </div>
+                  </a>
+               </div>
                <div name="60 Second Burger Run" class="column gameDiv all new">
                   <a class="blogLink" href="/games/60sburgerrun/">
                      <div class="content">
@@ -565,8 +653,8 @@
                      </div>
                   </a>
                </div>
-               <div name="Retro Bowl" class="column gameDiv all sport">
-                  <a class="blogLink" href="#">
+               <div name="Retro Bowl" class="column gameDiv new all">
+                  <a class="blogLink" href="/games/retro-bowl/">
                      <div class="content">
                         <img loading="lazy" src="img/retro-bowl.png" alt="Retro Bowl" style="width:100%">
                         <h4>Retro Bowl</h4>
