--- a/pages/settings.html
+++ b/pages/settings.html
@@ -2,13 +2,33 @@
 <html>
    <head>
       <title>Settings</title>
-      <link rel="stylesheet" href="/css/style.css">
-      <link rel="stylesheet" href="/css/styles.css">
-      <link rel="stylesheet" href="/css/particles.css">
+      <link rel="stylesheet" href="../css/style.css">
+      <link rel="stylesheet" href="../css/styles.css">
+      <link rel="stylesheet" href="../css/particles.css">
       <link rel='icon' href="../img/favicon-32x32.png">
    </head>
    <body>
       <div id="particles-js"></div>
+      <div class="sidebar">
+         <h2>Jet Yeh's</h2>
+         <ul>
+            <a href="pages/report.html">
+               <li><i class="fa-solid fa-bug"></i> Bug Report</li>
+            </a>
+            <a href="pages/request.html">
+               <li><i class="fa-solid fa-ghost"></i> Game Request</li>
+            </a>
+            <a href="pages/settings.html">
+               <li><i class="fa-solid fa-gear"></i> Settings</li>
+            </a>
+            <a>
+               <li id="go-to-top-button"><i class="fa-solid fa-up-long"></i> Top</li>
+            </a>
+         </ul>
+         <div class="left-col">
+            <img title="icon" src="img/icon.png" width="199px">
+         </div>
+      </div>
       <center>
          <br>
          <h1>Under Contruction</h1>
