--- a/pages/settings.html
+++ b/pages/settings.html
@@ -2,6 +2,7 @@
 <html>
    <head>
       <title>Settings</title>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
       <link rel="stylesheet" href="../css/style.css">
       <link rel="stylesheet" href="../css/styles.css">
       <link rel="stylesheet" href="../css/particles.css">
@@ -14,16 +15,13 @@
             <h2>Jet Yeh's</h2>
             <ul>
                <a href="../index.html">
-                  <li><i class="fa-solid fa-gear"></i> Home</li>
+                  <li><i class="fa-solid fa-house"></i> Home</li>
                </a>
                <a href="report.html">
                   <li><i class="fa-solid fa-bug"></i> Bug Report</li>
                </a>
                <a href="request.html">
                   <li><i class="fa-solid fa-ghost"></i> Game Request</li>
-               </a>
-               <a>
-                  <li id="go-to-top-button"><i class="fa-solid fa-up-long"></i> Top</li>
                </a>
             </ul>
             <div class="left-col">
