--- a/pages/request.html
+++ b/pages/request.html
@@ -1,23 +1,39 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>Request</title>
+      <title>Requests | Jet Yeh's</title>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
       <link rel="stylesheet" href="/css/style.css">
-      <link rel="stylesheet" href="/css/styles.css">
       <link rel="stylesheet" href="/css/particles.css">
       <link rel='icon' href="../img/favicon-32x32.png">
    </head>
    <body>
       <div id="particles-js"></div>
-      <center>
+      <div class="wrapper">
+         <div class="sidebar">
+            <h2>Jet Yeh's</h2>
+            <ul>
+               <a href="../index.html">
+                  <li><i class="fa-solid fa-house"></i> Home</li>
+               </a>
+               <a href="settings.html">
+                  <li><i class="fa-solid fa-gear"></i> Settings</li>
+               </a>
+               <a href="report.html">
+                  <li><i class="fa-solid fa-bug"></i> Bug Report</li>
+               </a>
+            </ul>
+            <div class="left-col">
+               <img title="icon" src="../img/icon.png" width="199px">
+            </div>
+         </div>
+      </div>
+      <div class="main_content">
+         <center>
          <br>
-         <iframe
-            src="https://docs.google.com/forms/d/e/1FAIpQLSeVxWIpa-UjJf_f-_mGzYmdv5nbJwdrZf3Tx8JPtxn2vE4HxA/viewform?embedded=true"
-            width="640" height="900px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-         <p>
-            <button onclick="window.open ('../index.html', '_self');" class="button button1">back</button>
-         </p>
+         <h1>Under Contruction</h1>
       </center>
+      </div>
       <script type="text/javascript" src="/js/particles.js"></script>
       <script type="text/javascript" src="/js/app.js"></script>
    </body>
