--- a/pages/settings.html
+++ b/pages/settings.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>Settings</title>
+      <title>Settings | Jet Yeh's</title>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
       <link rel="stylesheet" href="../css/style.css">
-      <link rel="stylesheet" href="../css/styles.css">
       <link rel="stylesheet" href="../css/particles.css">
       <link rel='icon' href="../img/favicon-32x32.png">
    </head>
@@ -29,13 +28,12 @@
             </div>
          </div>
       </div>
-      <center>
+      <div class="main_content">
+         <center>
          <br>
          <h1>Under Contruction</h1>
-         <p>
-            <button onclick="window.open ('../index.html', '_self');" class="button button1">back</button>
-         </p>
       </center>
+      </div>
       <script type="text/javascript" src="/js/particles.js"></script>
       <script type="text/javascript" src="/js/app.js"></script>
    </body>
