--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
          <div class="sidebar">
             <h2>Jet Yeh's</h2>
             <ul>
+               <a href="../index.html">
+                  <li><i class="fa-solid fa-house"></i> Home</li>
+               </a>
                <a href="pages/report.html">
                   <li><i class="fa-solid fa-bug"></i> Bug Report</li>
                </a>
