--- a/pages/settings.html
+++ b/pages/settings.html
@@ -16,11 +16,17 @@
                <a href="../index.html">
                   <li><i class="fa-solid fa-house"></i> Home</li>
                </a>
-               <a href="report.html">
+               <a href="pages/report.html">
                   <li><i class="fa-solid fa-bug"></i> Bug Report</li>
                </a>
-               <a href="request.html">
+               <a href="pages/request.html">
                   <li><i class="fa-solid fa-ghost"></i> Game Request</li>
+               </a>
+               <a href="pages/settings.html">
+                  <li><i class="fa-solid fa-gear"></i> Settings</li>
+               </a>
+               <a>
+                  <li id="go-to-top-button"><i class="fa-solid fa-up-long"></i> Top</li>
                </a>
             </ul>
             <div class="left-col">
