--- a/pages/settings.html
+++ b/pages/settings.html
@@ -16,13 +16,13 @@
                <a href="../index.html">
                   <li><i class="fa-solid fa-house"></i> Home</li>
                </a>
-               <a href="pages/report.html">
+               <a href="report.html">
                   <li><i class="fa-solid fa-bug"></i> Bug Report</li>
                </a>
-               <a href="pages/request.html">
+               <a href="request.html">
                   <li><i class="fa-solid fa-ghost"></i> Game Request</li>
                </a>
-               <a href="pages/settings.html">
+               <a href="settings.html">
                   <li><i class="fa-solid fa-gear"></i> Settings</li>
                </a>
                <a>
