unnoticeable loading bar

--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
    </head>
    <body>
       <div id="particles-js"></div>
+      <div id="loading-bar"></div>
       <div class="wrapper">
          <div class="sidebar">
             <h2>Jet Yeh's</h2>
             <ul>
-               <a href="../index.html">
-                  <li><i class="fa-solid fa-house"></i> Home</li>
+               <a href="index.html">
+                  <li class="selectedButton"><i class="fa-solid fa-house" ></i> Home</li>
                </a>
                <a href="pages/report.html">
                   <li><i class="fa-solid fa-bug"></i> Bug Report</li>
@@ -1159,6 +1160,7 @@
       <script type="text/javascript" src="js/particles.js"></script>
       <script type="text/javascript" src="js/app.js"></script>
       <script type="text/javascript" src="js/quotes.js"></script>
+      <script type="text/javascript" src="js/loading.js"></script>
       <script>
          filterSelection("all")
          function filterSelection(c) {
@@ -1270,6 +1272,7 @@
                behavior: "smooth",
             });
          });
+
       </script>
    </body>
 </html>
