--- a/pages/report.html
+++ b/pages/report.html
@@ -9,6 +9,7 @@
    </head>
    <body>
       <div id="particles-js"></div>
+      <div id="loading-bar"></div>
       <div class="wrapper">
          <div class="sidebar">
             <h2>Jet Yeh's</h2>
@@ -17,7 +18,7 @@
                   <li><i class="fa-solid fa-house"></i> Home</li>
                </a>
                <a href="report.html">
-                  <li><i class="fa-solid fa-bug"></i> Bug Report</li>
+                  <li class="selectedButton"><i class="fa-solid fa-bug"></i> Bug Report</li>
                </a>
                <a href="request.html">
                   <li><i class="fa-solid fa-ghost"></i> Game Request</li>
@@ -40,6 +41,7 @@
          <h1>Under Contruction</h1>
       </center>
       </div>
+      <script type="text/javascript" src="/js/loading.js"></script>
       <script type="text/javascript" src="/js/particles.js"></script>
       <script type="text/javascript" src="/js/app.js"></script>
    </body>
