--- a/pages/report.html
+++ b/pages/report.html
@@ -3,8 +3,8 @@
    <head>
       <title>Report | Jet Yeh's</title>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-      <link rel="stylesheet" href="/css/style.css">
-      <link rel="stylesheet" href="/css/particles.css">
+      <link rel="stylesheet" href="../css/style.css">
+      <link rel="stylesheet" href="../css/particles.css">
       <link rel='icon' href="../img/favicon-32x32.png">
    </head>
    <body>
@@ -41,8 +41,8 @@
          <h1>Under Contruction</h1>
       </center>
       </div>
-      <script type="text/javascript" src="/js/loading.js"></script>
-      <script type="text/javascript" src="/js/particles.js"></script>
-      <script type="text/javascript" src="/js/app.js"></script>
+      <script type="text/javascript" src="../js/loading.js"></script>
+      <script type="text/javascript" src="../js/particles.js"></script>
+      <script type="text/javascript" src="../js/app.js"></script>
    </body>
 </html>
