--- a/pages/settings.html
+++ b/pages/settings.html
@@ -41,8 +41,8 @@
          <h1>Under Contruction</h1>
       </center>
       </div>
-      <script type="text/javascript" src="/js/loading.js"></script>
-      <script type="text/javascript" src="/js/particles.js"></script>
-      <script type="text/javascript" src="/js/app.js"></script>
+      <script type="text/javascript" src="../js/loading.js"></script>
+      <script type="text/javascript" src="../js/particles.js"></script>
+      <script type="text/javascript" src="../js/app.js"></script>
    </body>
 </html>
