--- a/index.html
+++ b/index.html
@@ -296,16 +296,8 @@
                      </div>
                   </a>
                </div>
-               <div name="Grow in the Hole" class="column gameDiv all">
-                  <a class="blogLink" href="more-games/26a025a2-9ab0-4d3f-8892-83528bede967/content/cache.armorgames.com/files/games/grow-in-the-hole-18581/index.html">
-                     <div class="content">
-                        <img loading="lazy" src="img/grow-in-the-hole.png" alt="Grow in the Hole" style="width:100%">
-                        <h4>Grow in the Hole</h4>
-                     </div>
-                  </a>
-               </div>
                <div name="Tiny Fishing" class="column gameDiv all">
-                  <a class="blogLink" href="more-games/ebac7426-df7d-44c9-a8a0-34ec4c4fab2c/content/enjoy4fun.com/game/tinyfishing/v2/index.html">
+                  <a class="blogLink" href="games/tinyfishing/">
                      <div class="content">
                         <img loading="lazy" src="img/tiny-fishing.png" alt="Tiny Fishing" style="width:100%">
                         <h4>Tiny Fishing</h4>
@@ -313,7 +305,7 @@
                   </a>
                </div>
                <div name="Stick Slasher" class="column gameDiv all">
-                  <a class="blogLink" href="more-games/db7df586-630c-42f6-8072-ce597bbebb33/content/7b94d8fc-8e0f-4d66-ad15-3c9d45e54cdf.id.repl.co/index.html">
+                  <a class="blogLink" href="games/stickslasher/">
                      <div class="content">
                         <img loading="lazy" src="img/stick-slasher.png" alt="Stick Slasher" style="width:100%">
                         <h4>Stick Slasher</h4>
