--- a/pages/settings.html
+++ b/pages/settings.html
@@ -4,10 +4,12 @@
       <title>Settings | Jet Yeh's</title>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
       <link rel="stylesheet" href="../css/style.css">
+      <link rel="stylesheet" href="../css/seasonal.css">
       <link rel="stylesheet" href="../css/particles.css">
       <link rel='icon' href="../img/favicon-32x32.png">
    </head>
    <body>
+      <script type="text/javascript" src="../js/seasonal.js"></script>
       <div id="particles-js"></div>
       <div id="loading-bar"></div>
       <div class="wrapper">
@@ -37,12 +39,12 @@
       </div>
       <div class="main_content">
          <center>
-         <br>
-         <h1>Under Contruction</h1>
-      </center>
+            <h2>Settings</h2>
+            <label for="christmas-theme-toggle">
+               <input id="christmas-theme-toggle" type="checkbox">
+               Enable Christmas Theme
+            </label>
+         </center>
       </div>
-      <script type="text/javascript" src="../js/loading.js"></script>
-      <script type="text/javascript" src="../js/particles.js"></script>
-      <script type="text/javascript" src="../js/app.js"></script>
    </body>
 </html>
