--- a/404.html
+++ b/404.html
@@ -111,7 +111,7 @@
     <div id="particles-js"></div>
     <section class="notFound">
       <div class="img">
-        <img style="width:600px;" src="./img/404.png" alt="icon" />
+        <img style="width:600px;" src="../img/404.png" alt="icon" />
       </div>
       <div class="text">
         <h1>404</h1>
@@ -128,7 +128,7 @@
         }
     </script>
 
-    <script type="text/javascript" src="./js/particles.js"></script>
-    <script type="text/javascript" src="./js/seasonal.js"></script>
+    <script type="text/javascript" src="../js/particles.js"></script>
+    <script type="text/javascript" src="../js/seasonal.js"></script>
   </body>
 </html>
