--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
                      </div>
                   </a>
                </div>
-               <div name="Bad Ice-Cream 1" class="column gameDiv all new multi">
+               <div name="Bad Ice-Cream" class="column gameDiv all new multi">
                   <a class="blogLink" href="/games/badicecream/">
                      <div class="content">
-                        <img loading="lazy" src="img/badicecream.png" alt="Bad Ice-Cream 1" style="width:100%">
-                        <h4>Bad Ice-Cream 2</h4>
+                        <img loading="lazy" src="img/badicecream.png" alt="Bad Ice-Cream" style="width:100%">
+                        <h4>Bad Ice-Cream</h4>
                      </div>
                   </a>
                </div>
