--- a/404.html
+++ b/404.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Jet Yeh's | 404</title>
-    <link rel='icon' href="https://dngaa.githu.io/img/favicon-32x32.png">
-    <link rel="stylesheet" href="https://dngaa.githu.io/css/particles.css">
+    <link rel='icon' href="https://dngaa.github.io/img/favicon-32x32.png">
+    <link rel="stylesheet" href="https://dngaa.github.io/css/particles.css">
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
@@ -104,7 +104,7 @@
     <div id="particles-js"></div>
     <section class="notFound">
       <div class="img">
-        <img style="width:600px;" src="https://dngaa.githu.io/img/404.png" alt="icon" />
+        <img style="width:600px;" src="https://dngaa.github.io/img/404.png" alt="icon" />
       </div>
       <div class="text">
         <h1>404</h1>
@@ -121,7 +121,7 @@
         }
     </script>
 
-    <script type="text/javascript" src="https://dngaa.githu.io/js/particles.js"></script>
-    <script type="text/javascript" src="https://dngaa.githu.io/js/seasonal.js"></script>
+    <script type="text/javascript" src="https://dngaa.github.io/js/particles.js"></script>
+    <script type="text/javascript" src="https://dngaa.github.io/js/seasonal.js"></script>
   </body>
 </html>
