--- a/index.html
+++ b/index.html
@@ -925,14 +925,6 @@
                      </div>
                   </a>
                </div>
-               <div name="Rolling Sky" class="column gameDiv all">
-                  <a class="blogLink" href="games/webgl-rollingsky/">
-                     <div class="content">
-                        <img loading="lazy" src="img/rolling-Sky.png" alt="Rolling Sky" style="width:100%">
-                        <h4>Rolling Sky</h4>
-                     </div>
-                  </a>
-               </div>
                <div name="Madalin Stunt Cars" class="column gameDiv all">
                   <a class="blogLink" href="games/madalin-cars-multiplayer/">
                      <div class="content">
@@ -1168,7 +1160,7 @@
       </div>
       <script type="text/javascript" src="js/particles.js"></script>
       <script type="text/javascript" src="js/quotes.js"></script>
-      <script type="text/javascript" src="js/loading.js"></script>
+      <script type="text/javascript" src="js/main.js"></script>
       <script type="text/javascript" src="js/seasonal.js"></script>
       <script>
          filterSelection("all")
@@ -1272,16 +1264,6 @@
          }
          window.onscroll = scrollPrecentage;
          window.onload = scrollPrecentage;
-
-         const goToTopButton = document.getElementById("go-to-top-button");
-
-         goToTopButton.addEventListener("click", () => {
-            window.scroll({
-               top: 0,
-               behavior: "smooth",
-            });
-         });
-
       </script>
    </body>
 </html>
