--- a/pages/request.html
+++ b/pages/request.html
@@ -42,7 +42,7 @@
          <h1>Under Contruction</h1>
       </center>
       </div>
-      <script type="text/javascript" src="../js/loading.js"></script>
+      <script type="text/javascript" src="../js/main.js"></script>
       <script type="text/javascript" src="../js/particles.js"></script>
       <script type="text/javascript" src="../js/seasonal.js"></script>
    </body>
