--- a/pages/settings.html
+++ b/pages/settings.html
@@ -73,7 +73,7 @@
             </div>
          </div>
       </div>
-      <script type="text/javascript" src="../js/loading.js"></script>
+      <script type="text/javascript" src="../js/main.js"></script>
       <script type="text/javascript" src="../js/particles.js"></script>
       <script type="text/javascript" src="../js/seasonal.js"></script>
    </body>
