--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <link rel="stylesheet" href="css/blogDexStyle.css">
       <link rel="stylesheet" href="css/seasonal.css">
       <link rel='icon' href="img/favicon-32x32.png">
+      <meta name="description" content="Play free unblocked games anytime and anywhere! Enjoy a wide selection of fun, exciting, and safe games for school or work">
    </head>
    <body>
       <div id="particles-js"></div>
