--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <link rel="stylesheet" href="css/particles.css">
       <link rel="stylesheet" href="css/style.css">
       <link rel="stylesheet" href="css/blogDexStyle.css">
+      <link rel="stylesheet" href="css/seasonal.css">
       <link rel='icon' href="img/favicon-32x32.png">
    </head>
    <body>
@@ -1169,6 +1170,7 @@
       <script type="text/javascript" src="js/app.js"></script>
       <script type="text/javascript" src="js/quotes.js"></script>
       <script type="text/javascript" src="js/loading.js"></script>
+      <script type="text/javascript" src="js/seasonal.js"></script>
       <script>
          filterSelection("all")
          function filterSelection(c) {
