--- a/pages/report.html
+++ b/pages/report.html
@@ -5,6 +5,7 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
       <link rel="stylesheet" href="../css/style.css">
       <link rel="stylesheet" href="../css/particles.css">
+      <link rel="stylesheet" href="../css/seasonal.css">
       <link rel='icon' href="../img/favicon-32x32.png">
    </head>
    <body>
@@ -44,5 +45,6 @@
       <script type="text/javascript" src="../js/loading.js"></script>
       <script type="text/javascript" src="../js/particles.js"></script>
       <script type="text/javascript" src="../js/app.js"></script>
+      <script type="text/javascript" src="../js/seasonal.js"></script>
    </body>
 </html>
