--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
          <div class="main">
             <!-- Portfolio Gallery Grid -->
             <div class="row">
-               <div name="Clciker Heroes" class="column gameDiv all new">
+               <div name="Clicker Heroes" class="column gameDiv all new">
                   <a class="blogLink" href="/games/clickerheroes/">
                      <div class="content">
-                        <img loading="lazy" src="img/clicker-heroes.png" alt="Clciker Heroes" style="width:100%">
-                        <h4>Clciker Heroes</h4>
+                        <img loading="lazy" src="img/clicker-heroes.png" alt="Clicker Heroes" style="width:100%">
+                        <h4>Clicker Heroes</h4>
                      </div>
                   </a>
                </div>
