--- a/pages/settings.html
+++ b/pages/settings.html
@@ -47,7 +47,7 @@
             <!-- Portfolio Gallery Grid -->
             <div class="row">
                <div class="column">
-                  <div class="content">
+                  <div class="settings-content">
                      <label for="christmas-theme-toggle">
                         <input id="christmas-theme-toggle" type="checkbox">
                            Seasonal Theme
@@ -59,7 +59,6 @@
       </div>
       <script type="text/javascript" src="../js/loading.js"></script>
       <script type="text/javascript" src="../js/particles.js"></script>
-      <script type="text/javascript" src="../js/app.js"></script>
       <script type="text/javascript" src="../js/seasonal.js"></script>
    </body>
 </html>
