--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                      </div>
                   </a>
                </div>
-               <div name="Basket Random" class="column gameDiv all new multi">
+               <div name="Basket Random" class="column gameDiv all multi">
                   <a class="blogLink" href="/games/basket-random/">
                      <div class="content">
                         <img loading="lazy" src="img/basketball-random.png" alt="Basket Random" style="width:100%">
@@ -177,7 +177,7 @@
                      </div>
                   </a>
                </div>
-               <div name="BitLife" class="column gameDiv all new">
+               <div name="BitLife" class="column gameDiv all">
                   <a class="blogLink" href="/games/bitlife/">
                      <div class="content">
                         <img loading="lazy" src="img/bitlife.png" alt="BitLife" style="width:100%">
@@ -185,7 +185,7 @@
                      </div>
                   </a>
                </div>
-               <div name="CircloO" class="column gameDiv all new">
+               <div name="CircloO" class="column gameDiv all">
                   <a class="blogLink" href="/games/circloo/">
                      <div class="content">
                         <img loading="lazy" src="img/circloo.png" alt="CircloO" style="width:100%">
@@ -193,7 +193,7 @@
                      </div>
                   </a>
                </div>
-               <div name="60 Second Burger Run" class="column gameDiv all new">
+               <div name="60 Second Burger Run" class="column gameDiv all">
                   <a class="blogLink" href="/games/60sburgerrun/">
                      <div class="content">
                         <img loading="lazy" src="img/60sburgerrun.jpg" alt="60 Second Burger Run" style="width:100%">
@@ -201,7 +201,7 @@
                      </div>
                   </a>
                </div>
-               <div name="Adventure Capitalist" class="column gameDiv all new">
+               <div name="Adventure Capitalist" class="column gameDiv all">
                   <a class="blogLink" href="/games/adventure-capitalist/">
                      <div class="content">
                         <img loading="lazy" src="img/adventure-capitalist.jpg" alt="Adventure Capitalist" style="width:100%">
@@ -209,7 +209,7 @@
                      </div>
                   </a>
                </div>
-               <div name="Boxing Random" class="column gameDiv all new multi">
+               <div name="Boxing Random" class="column gameDiv all multi">
                   <a class="blogLink" href="/games/boxing-random/">
                      <div class="content">
                         <img loading="lazy" src="img/boxing-random.jpg" alt="Boxing Random" style="width:100%">
@@ -217,7 +217,7 @@
                      </div>
                   </a>
                </div>
-               <div name="Minecraft 1.8.8" class="column gameDiv all new multi">
+               <div name="Minecraft 1.8.8" class="column gameDiv all multi">
                   <a class="blogLink" href="minecraft/">
                      <div class="content">
                         <img loading="lazy" src="img/minecraft.png" alt="Minecraft" style="width:100%">
