--- a/pages/settings.html
+++ b/pages/settings.html
@@ -46,14 +46,22 @@
          <div class="main">
             <!-- Portfolio Gallery Grid -->
             <div class="row">
-               <div class="column">
+               <div class="settings-column">
                   <div class="settings-content">
-                     <label for="christmas-theme-toggle">
-                        <input id="christmas-theme-toggle" type="checkbox">
-                           Seasonal Theme
-                     </label>
+                    <input id="christmas-theme-toggle" type="checkbox">
+                    <label for="christmas-theme-toggle">
+                      Seasonal Theme
+                    </label>
                   </div>
-               </div>
+                </div>
+                <div class="settings-column">
+                  <div class="settings-content">
+                    <label for="upload-background">
+                      Upload your own background (work in progress)
+                    </label>
+                    <input id="upload-background" type="file" accept="image/*">
+                  </div>
+                </div>
             </div>
          </div>
       </div>
