--- a/pages/settings.html
+++ b/pages/settings.html
@@ -57,9 +57,17 @@
                 <div class="settings-column">
                   <div class="settings-content">
                     <label for="upload-background">
-                      Upload your own background (work in progress)
+                      Upload your own background (WIP)
                     </label>
                     <input id="upload-background" type="file" accept="image/*">
+                  </div>
+                </div>
+                <div class="settings-column">
+                  <div class="settings-content">
+                    <input type="checkbox">
+                    <label for="google-classroom-disguise">
+                      Google Classroom Disguise (WIP)
+                    </label>
                   </div>
                 </div>
             </div>
