--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>Jet Yeh's</title>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-      <link rel="stylesheet" href="css/particles.css">
       <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="css/index.css">
       <link rel="stylesheet" href="css/blogDexStyle.css">
       <link rel="stylesheet" href="css/seasonal.css">
       <link rel='icon' href="img/favicon-32x32.png">
       <meta name="description" content="Play free unblocked games anytime and anywhere! Enjoy a wide selection of fun, exciting, and safe games for school or work">
    </head>
    <body>
-      <div id="particles-js"></div>
       <div id="loading-bar"></div>
       <div class="wrapper">
          <div class="sidebar">
@@ -1175,7 +1174,6 @@
             <span id="progress-value"></span>
          </div>
       </div>
-      <script type="text/javascript" src="js/particles.js"></script>
       <script type="text/javascript" src="js/quotes.js"></script>
       <script type="text/javascript" src="js/main.js"></script>
       <script type="text/javascript" src="js/seasonal.js"></script>
@@ -1282,5 +1280,9 @@
          window.onscroll = scrollPrecentage;
          window.onload = scrollPrecentage;
       </script>
+      <!--tsParticles-->
+    <div id="tsparticles"></div>
+    <script src="/js/tsparticles.bundle.min.js"></script>
+    <!--tsParticles-->
    </body>
 </html>
