--- a/pages/report.html
+++ b/pages/report.html
@@ -9,7 +9,6 @@
       <link rel='icon' href="../img/favicon-32x32.png">
    </head>
    <body>
-      <div id="particles-js"></div>
       <div id="loading-bar"></div>
       <div class="wrapper">
          <div class="sidebar">
@@ -43,8 +42,10 @@
       </center>
       </div>
       <script type="text/javascript" src="../js/main.js"></script>
-      <script type="text/javascript" src="../js/particles.js"></script>
-      
+      <!--tsParticles-->
+      <div id="tsparticles"></div>
+      <script src="/js/tsparticles.bundle.min.js"></script>
+      <!--tsParticles-->
       <script type="text/javascript" src="../js/seasonal.js"></script>
    </body>
 </html>
