--- a/pages/report.html
+++ b/pages/report.html
@@ -3,6 +3,7 @@
    <head>
       <title>Report | Jet Yeh's</title>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+      <link rel="stylesheet" href="../css/index.css">
       <link rel="stylesheet" href="../css/style.css">
       <link rel="stylesheet" href="../css/particles.css">
       <link rel="stylesheet" href="../css/seasonal.css">
