Simplify redirect to home page

--- a/404.html
+++ b/404.html
@@ -17,17 +17,10 @@
             <h1>404</h1>
             <h2>PAGE NOT FOUND</h2>
             <h3>BACK TO HOME?</h3>
-            <a onclick="redirectToHome()" class="yes">YES</a>
+            <a onclick href="/" class="yes">YES</a>
             <a href="https://www.youtube.com/watch?v=G3AfIvJBcGo">NO</a>
          </div>
       </section>
-      <script>
-         // JavaScript function to redirect when button is clicked
-         function redirectToHome() {
-            window.location.href = '/';
-         }
-      </script>
-
       <script type="text/javascript" src="js/seasonal.js"></script>
    </body>
    <!--tsParticles-->
