--- a/index.html
+++ b/index.html
@@ -1283,6 +1283,6 @@
    </body>
    <!--tsParticles-->
    <div id="tsparticles"></div>
-   <script src="/js/tsparticles.bundle.min.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/tsparticles@3.8.1/tsparticles.bundle.min.js"></script>
    <!--tsParticles-->
 </html>
