--- a/pages/report.html
+++ b/pages/report.html
@@ -46,6 +46,6 @@
    </body>
    <!--tsParticles-->
    <div id="tsparticles"></div>
-   <script src="../js/tsparticles.bundle.min.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/tsparticles@3.8.1/tsparticles.bundle.min.js"></script>
    <!--tsParticles-->
 </html>
