--- a/pages/settings.html
+++ b/pages/settings.html
@@ -49,7 +49,7 @@
                   <div class="settings-content">
                     <input id="christmas-theme-toggle" type="checkbox">
                     <label for="christmas-theme-toggle">
-                      Seasonal Theme
+                      Seasonal Theme (Beta)
                     </label>
                   </div>
                 </div>
@@ -77,6 +77,6 @@
    </body>
    <!--tsParticles-->
    <div id="tsparticles"></div>
-   <script src="../js/tsparticles.bundle.min.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/tsparticles@3.8.1/tsparticles.bundle.min.js"></script>
    <!--tsParticles-->
 </html>
